Fix button alignment

--- a/style.css
+++ b/style.css
@@ -10,8 +10,12 @@ body {
 }
 
 .btn {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   border: 2px solid black;
+  border-radius: 8px;
   margin-top: 10rem;
+  text-align: center;
 }
